<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="appbar_label_crime_list">Crime List</string>
    <string name="appbar_label_crime">Crime Detail</string>

    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>

    <string name="menu_item_new_crime">New Crime</string>

    <string name="text_no_crime" translatable="false">There are no crimes. You can add the first.</string>

    <string name="text_report_solved">The case is solved</string>
    <string name="text_report_unsolved">The case is not solved</string>
    <string name="text_report_no_suspect">There is no suspect.</string>
    <string name="text_report_suspect">the suspect is %s.</string>
    <string name="text_send_crime_report">Send crime report via</string>

    <string name="text_warning_photo_path_miss" translatable="false">Warning: The photo path is missed.</string>

    <string name="button_choose_suspect">CHOOSE SUSPECT</string>
    <string name="button_send_crime_report">SEND CRIME REPORT</string>
</resources>
